--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -72,3 +72,4 @@ configurations.all {
         }
     }
 }
+
